# Nimbus

./: .dockerignore  .gitignore  ARCHITECTURE-CHANGE.md  Dockerfile  Dockerfile.gazebo  GAZEBO_SETUP.md  INSTALLATION.md  INSTALLATION_GUIDE.md  Instructions.txt  License  Pathing.txt  README.md  STARTUP-GUIDE.md  UNIFIED-ARCHITECTURE.md  docker-compose.cpu.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.server.yml  docker-compose.yml  requirements_temp.txt  start_video_pipeline.bat  start_video_pipeline.py  test_calculation_manually.py  test_position_debug.py
.claude/: settings.local.json
Arduino/GetPinsFromLaser/: 1960mm.csv  4800mm.csv  GetPinsFromLaser.ino
_DOCS/: CompanyLetter.docx  CompanyLetter.md  DEVELOPMENT.md  INSTALLATION.md  Instructions.txt  MeetingWithntsuaviation.md  Pathing.txt  ToDo.txt  system_flowchart.txt
_DOCS/Flowchart/: ai.txt  hub.txt  mr.txt  robotics.txt  simplified-example-flow.txt
_DOCS/Reporting/: Report_Template.docx  Report_Template.md
_DOCS/Speech Cards/: Activity Flow.md  Object Detection.md  Systems UML Diagram.md
_old/docker/: cyclonedx.xml
_old/gazebo/: WebSocketTest.py  cyclonedds-setup.md  cyclonedx.xml  debug_gazebo_from_windows.py  debug_topics.py  debug_wsl2_network.py  gazebo_rosbridge.py  install-wsl2-gazebo-ubuntu24-fixed.sh  install-wsl2-gazebo.sh
_temp/: consolereturn.txt
docker/: cyclonedx-server.xml
gazebo/: console.txt  debug_gazebo_direct.py  gazebo_setup.md  install-wsl2-gazebo-ubuntu24.sh  listen_gazebo_topics.py
gazebo/gazebo-worlds/: white_room_world.sdf  world.sdf
nimbus/: Dockerfile.nimbus  main.py
nimbus-ai/: AI.py  DEMO_object_detection.py  DEPTH_INTEGRATION_PLAN.md  Dockerfile.ai  __init__.py  app.py  documentation.md  flowchart.txt  requirements.txt  simple_video_feed.py  system_flowchart.txt  test_object_detection.py  test_ros2_raw.py
nimbus-ai/OLD/: AI-old.py  AI.py  WEB_CONTROL_README.md  start_web_control.py  web_control.py
nimbus-ai/classes/: depth_comparison.py  depth_node.py  intent_object_node.py  object_detect_node.py  object_detect_node_v11.py  object_position_node.py  rtabmap_node.py
nimbus-ai/config/: object_mapping.py
nimbus-hub/: README.md  hub.py  requirements.txt  start-hub.bat  start-hub.sh
nimbus-mr/: Dockerfile.mr  MR_launcher.py  TESTING_detection_publisher.py  TESTING_messaging_publisher.py  TESTING_pos_publisher.py  mr_audio_publisher.py  mr_drone_pose_subscriber.py  mr_main.py  mr_messaging_subscriber.py  mr_object_pose_subscriber.py  mr_video_subscriber.py  mr_yaw_publisher.py  requirements.txt
nimbus-mr-sim/: MR_MAIN.py  mr_drone_pose_subscriber.py  mr_messaging_subscriber.py  mr_object_pose_subscriber.py  mr_object_pose_subscriber_OLD.py  mr_object_telemetry_subscriber.py  mr_video_subscriber.py  mr_yaw_publisher.py
nimbus-robotics/: Dockerfile.drone  drone_main.py  drone_publisher.py  drone_video_demo.py  requirements.txt
nimbus-webui/: Dockerfile.webui
public/: ROS2_Publishers_Subscribers.md
ros2-config/: CMakeLists.txt  install_packages.sh  package.xml
scripts/: start-gazebo-gui.sh  start-nimbus.bat  test-integration.sh
video/: capture.py  config.py  display(not using).py  main.py  ros2_publisher.py
(+92 files in other folders)
