<?xml version="1.0"?>
<package format="3">
  <name>nimbus_config</name>
  <version>1.0.0</version>
  <description>Nimbus ROS2 Configuration Package</description>
  
  <maintainer email="nimbus@example.com">Nimbus Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rtabmap_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>