<?xml version="1.0"?>
<package format="3">
  <name>nimbus_config</name>
  <version>1.0.0</version>
  <description>Nimbus ROS2 Configuration Package</description>
  
  <maintainer email="nimbus@example.com">Nimbus Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  
  <!-- Message types -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>diagnostic_msgs</depend>
  
  <!-- SLAM and Navigation -->
  <depend>rtabmap_ros</depend>
  <depend>rtabmap_msgs</depend>
  <depend>rtabmap_slam</depend>
  <depend>rtabmap_odom</depend>
  <depend>rtabmap_sync</depend>
  <depend>rtabmap_util</depend>
  <depend>navigation2</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>slam_toolbox</depend>
  
  <!-- Transform and coordinate frames -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>robot_state_publisher</depend>
  
  <!-- Image and point cloud processing -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>depthimage_to_laserscan</depend>
  
  <!-- Communication and bridge -->
  <depend>rosbridge_server</depend>
  <depend>rosbridge_suite</depend>
  <depend>rosapi</depend>
  
  <!-- Sensors -->
  <depend>realsense2_camera</depend>
  <depend>velodyne</depend>
  <depend>velodyne_msgs</depend>
  <depend>imu_filter_madgwick</depend>
  
  <!-- Teleop and control -->
  <depend>teleop_twist_joy</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>joy</depend>
  
  <!-- Visualization -->
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>interactive_markers</depend>
  
  <!-- Utilities -->
  <depend>resource_retriever</depend>
  <depend>pluginlib</depend>
  <depend>filters</depend>
  <depend>angles</depend>
  <depend>laser_geometry</depend>
  <depend>kdl_parser</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>